...
                    bookmarkHandler()
                } label: {
                    Image(systemName: "book")
                        .imageScale(.large)
                        .frame(width: 40, height: 40, alignment: .center)
                }
                .accessibilityIdentifier("showBookmarkButton")
                Button {
                    withAnimation(.easeInOut(duration: 0.4)) {
                        hideToolBar = true
                    }
                } label: {
                    Image(systemName: "chevron.down")
                        .imageScale(.large)
                        .frame(width: 40, height: 40, alignment: .center)
                }
                .accessibilityIdentifier("hideToolBarButton")
            }
            .padding(.vertical, 8)
            .padding(.horizontal, 16)
            .background(Color.footer)
        }
    }
...
