...
                Button {
                    dismiss()
                } label: {
                    Image(systemName: "xmark")
                        .font(.title3)
                }
                .accessibilityIdentifier("hideBookmarkButton")
            }
        }
        .padding(16)
        .background(Color.systemGray6)
    }

...
