/*
  MinBrowserUITests.swift
  MinBrowserUITests

  Created by Takuto Nakamura on 2022/04/02.
*/

import XCTest

final class MinBrowserUITests: XCTestCase {
    let app = XCUIApplication()

    override func setUpWithError() throws {
        continueAfterFailure = false
        app.launch()
    }

    func testSearchKeyword() throws {
        let searchTextField = app.textFields["searchTextField"]
        searchTextField.tap()
        searchTextField.typeText("apple\n")

        let actual = try XCTUnwrap(searchTextField.value as? String)
        let expect = "https://www.google.com/search?q=apple"
        XCTAssertEqual(actual, expect)
    }

    func testClearTextField() throws {
        let searchTextField = app.textFields["searchTextField"]
        searchTextField.tap()
        searchTextField.typeText("abcdefghijklmn")

        let clearButton = app.buttons["clearButton"]
        clearButton.tap()

        let actual = try XCTUnwrap(searchTextField.value as? String)
        let expect = "Search…"
        XCTAssertEqual(actual, expect)
    }

    func testHideToolBar() throws {
        let hideToolBarButton = app.buttons["hideToolBarButton"]
        hideToolBarButton.tap()

        let showToolBarButton = app.buttons["showToolBarButton"]
        XCTAssertTrue(showToolBarButton.exists)

        showToolBarButton.tap()
        XCTAssertTrue(hideToolBarButton.exists)
    }

    func testOpenBookmark() throws {
        let showBookmarkButton = app.buttons["showBookmarkButton"]
        showBookmarkButton.tap()

        let hideBookmarkButton = app.buttons["hideBookmarkButton"]
        XCTAssertTrue(hideBookmarkButton.exists)

        hideBookmarkButton.tap()
        XCTAssertTrue(showBookmarkButton.exists)
    }
}
